[project]
name = "my-crl"
version = "0.1.0"
description = "RL research project using JAX NNX with Metal acceleration"
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    "jax==0.4.34",          # jax-metal pins specific jax versions; check compatibility before bumping
    "jax-metal",            # Apple Metal PJRT plugin — GPU accel on Apple Silicon
    "flax>=0.10.0",         # includes nnx module
    "optax>=0.2.3",         # optimizers
    "numpy>=1.26,<2.0",     # jax-metal often lags numpy 2.0 support
    "wandb>=0.18.0",
    "tqdm>=4.66.0",
    "einops>=0.8.0",
    "chex>=0.1.87",
    "jupyterlab>=4.2.0",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",     # interactive widgets, progress bars in notebooks
    "matplotlib>=3.9.0",     # plotting in-notebook
    "jupytext>=1.16.0",      # optional: pair .ipynb with .py for clean diffs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]